                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2016-06-29
 * Added a describe_delete method.

2016-06-24
 * Replaced 451 error codes with the HTTP standard 401.

2016-06-22
 * Fixed a bug introduced in the last release where _include_options wasn't available on describe object calls.

2016-06-18
 * Added Wing::Role::Result::Cousin, which sets up many to many relationships between classes in a Wing way.
 * Added the Rest param _include and the method param include to describe() and format_list() in Wing::Dancer so that you can arbitrarily add stuff to class describe methods.
 * Documented the options in Wing::Rest for generate_relationship() and generate_all_relationships().
 * Fixed a bug relating to the object prefetch created by generate_relationship().
 * wing.angular.js objectListManager search() now has an on_success option that is passed the successful result set.

2016-06-16
 * Added privileged_params() to Wing::DB::Result.
 * Added check_privilege option to wing_field in Wing::Role::Result::Field.
 * The above two changes allow the creation of special privilege checks on a per-field basis. 

2016-06-11
 * Added Wing::Role::Result::Warnings to give a standardized way of creating warnings in classes.
 * Change a couple fields that shouldn't be not null in the User role.

2016-06-06
 * Moved environment setup into various OS specific readme files.

2016-06-03
 * Added WING_NO_EMAIL environment variable to skip sending email all together.
 * Added wait_on_wingman() and cleanup_wait_on_wingman() to Wing::TestHelper. 
 * Wing::TestHelper automatically recovers from a bad cleanup of the Andy test user.

2016-05-30
 * A few changes and bug fixes for better testing.

2016-05-24